vitamin/parser/VitaminCParser.py
# Generated from VitaminC.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class VitaminCParser ( Parser ):

    grammarFileName = "VitaminC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{'", "'}'", "'fun'", "'('", "')'", "','", 
                     "'->'", "'#'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'<'", "'>'", "'''", "'='", "':'", "';'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "ShebangLine", "WS", "NL", "Real", "Int", 
                      "String", "Comment", "Name", "LANGLE", "RANGLE", "QUOTE", 
                      "EQUAL", "COLON", "SEMI", "Symbol" ]

    RULE_program = 0
    RULE_chunk = 1
    RULE_block = 2
    RULE_expr = 3
    RULE_primary = 4
    RULE_typ = 5
    RULE_fun = 6
    RULE_funParam = 7
    RULE_call = 8
    RULE_callArg = 9
    RULE_pragma = 10
    RULE_pragmaFun = 11
    RULE_pragmaArg = 12
    RULE_constant = 13
    RULE_atom = 14
    RULE_intn = 15
    RULE_real = 16
    RULE_string = 17

    ruleNames =  [ "program", "chunk", "block", "expr", "primary", "typ", 
                   "fun", "funParam", "call", "callArg", "pragma", "pragmaFun", 
                   "pragmaArg", "constant", "atom", "intn", "real", "string" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    ShebangLine=9
    WS=10
    NL=11
    Real=12
    Int=13
    String=14
    Comment=15
    Name=16
    LANGLE=17
    RANGLE=18
    QUOTE=19
    EQUAL=20
    COLON=21
    SEMI=22
    Symbol=23

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def chunk(self):
            return self.getTypedRuleContext(VitaminCParser.ChunkContext,0)


        def EOF(self):
            return self.getToken(VitaminCParser.EOF, 0)

        def getRuleIndex(self):
            return VitaminCParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = VitaminCParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self.chunk()
            self.state = 37
            self.match(VitaminCParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ChunkContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(VitaminCParser.NL)
            else:
                return self.getToken(VitaminCParser.NL, i)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VitaminCParser.ExprContext)
            else:
                return self.getTypedRuleContext(VitaminCParser.ExprContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(VitaminCParser.SEMI)
            else:
                return self.getToken(VitaminCParser.SEMI, i)

        def getRuleIndex(self):
            return VitaminCParser.RULE_chunk

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterChunk" ):
                listener.enterChunk(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitChunk" ):
                listener.exitChunk(self)




    def chunk(self):

        localctx = VitaminCParser.ChunkContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_chunk)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 39
                    self.match(VitaminCParser.NL) 
                self.state = 44
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 46
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << VitaminCParser.T__0) | (1 << VitaminCParser.T__2) | (1 << VitaminCParser.T__3) | (1 << VitaminCParser.T__7) | (1 << VitaminCParser.Real) | (1 << VitaminCParser.Int) | (1 << VitaminCParser.String) | (1 << VitaminCParser.Name) | (1 << VitaminCParser.LANGLE) | (1 << VitaminCParser.RANGLE) | (1 << VitaminCParser.QUOTE) | (1 << VitaminCParser.EQUAL) | (1 << VitaminCParser.COLON) | (1 << VitaminCParser.Symbol))) != 0):
                self.state = 45
                self.expr()


            self.state = 65
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 60
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [VitaminCParser.SEMI]:
                        self.state = 48
                        self.match(VitaminCParser.SEMI)
                        self.state = 52
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        while _la==VitaminCParser.NL:
                            self.state = 49
                            self.match(VitaminCParser.NL)
                            self.state = 54
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)

                        pass
                    elif token in [VitaminCParser.NL]:
                        self.state = 56 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        while True:
                            self.state = 55
                            self.match(VitaminCParser.NL)
                            self.state = 58 
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)
                            if not (_la==VitaminCParser.NL):
                                break

                        pass
                    else:
                        raise NoViableAltException(self)

                    self.state = 62
                    self.expr() 
                self.state = 67
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

            self.state = 71
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==VitaminCParser.NL:
                self.state = 68
                self.match(VitaminCParser.NL)
                self.state = 73
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def chunk(self):
            return self.getTypedRuleContext(VitaminCParser.ChunkContext,0)


        def getRuleIndex(self):
            return VitaminCParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = VitaminCParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_block)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(VitaminCParser.T__0)
            self.state = 75
            self.chunk()
            self.state = 76
            self.match(VitaminCParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primary(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VitaminCParser.PrimaryContext)
            else:
                return self.getTypedRuleContext(VitaminCParser.PrimaryContext,i)


        def fun(self):
            return self.getTypedRuleContext(VitaminCParser.FunContext,0)


        def getRuleIndex(self):
            return VitaminCParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)




    def expr(self):

        localctx = VitaminCParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_expr)
        self._la = 0 # Token type
        try:
            self.state = 85
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [VitaminCParser.T__0, VitaminCParser.T__3, VitaminCParser.T__7, VitaminCParser.Real, VitaminCParser.Int, VitaminCParser.String, VitaminCParser.Name, VitaminCParser.LANGLE, VitaminCParser.RANGLE, VitaminCParser.QUOTE, VitaminCParser.EQUAL, VitaminCParser.COLON, VitaminCParser.Symbol]:
                self.enterOuterAlt(localctx, 1)
                self.state = 79 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 78
                    self.primary()
                    self.state = 81 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << VitaminCParser.T__0) | (1 << VitaminCParser.T__3) | (1 << VitaminCParser.T__7) | (1 << VitaminCParser.Real) | (1 << VitaminCParser.Int) | (1 << VitaminCParser.String) | (1 << VitaminCParser.Name) | (1 << VitaminCParser.LANGLE) | (1 << VitaminCParser.RANGLE) | (1 << VitaminCParser.QUOTE) | (1 << VitaminCParser.EQUAL) | (1 << VitaminCParser.COLON) | (1 << VitaminCParser.Symbol))) != 0)):
                        break

                pass
            elif token in [VitaminCParser.T__2]:
                self.enterOuterAlt(localctx, 2)
                self.state = 83
                self.match(VitaminCParser.T__2)
                self.state = 84
                self.fun()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PrimaryContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def call(self):
            return self.getTypedRuleContext(VitaminCParser.CallContext,0)


        def constant(self):
            return self.getTypedRuleContext(VitaminCParser.ConstantContext,0)


        def block(self):
            return self.getTypedRuleContext(VitaminCParser.BlockContext,0)


        def pragma(self):
            return self.getTypedRuleContext(VitaminCParser.PragmaContext,0)


        def expr(self):
            return self.getTypedRuleContext(VitaminCParser.ExprContext,0)


        def getRuleIndex(self):
            return VitaminCParser.RULE_primary

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrimary" ):
                listener.enterPrimary(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrimary" ):
                listener.exitPrimary(self)




    def primary(self):

        localctx = VitaminCParser.PrimaryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_primary)
        try:
            self.state = 95
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 87
                self.call()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 88
                self.constant()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 89
                self.block()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 90
                self.pragma()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 91
                self.match(VitaminCParser.T__3)
                self.state = 92
                self.expr()
                self.state = 93
                self.match(VitaminCParser.T__4)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TypContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atom(self):
            return self.getTypedRuleContext(VitaminCParser.AtomContext,0)


        def getRuleIndex(self):
            return VitaminCParser.RULE_typ

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTyp" ):
                listener.enterTyp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTyp" ):
                listener.exitTyp(self)




    def typ(self):

        localctx = VitaminCParser.TypContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_typ)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.atom()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atom(self):
            return self.getTypedRuleContext(VitaminCParser.AtomContext,0)


        def block(self):
            return self.getTypedRuleContext(VitaminCParser.BlockContext,0)


        def funParam(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VitaminCParser.FunParamContext)
            else:
                return self.getTypedRuleContext(VitaminCParser.FunParamContext,i)


        def typ(self):
            return self.getTypedRuleContext(VitaminCParser.TypContext,0)


        def getRuleIndex(self):
            return VitaminCParser.RULE_fun

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFun" ):
                listener.enterFun(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFun" ):
                listener.exitFun(self)




    def fun(self):

        localctx = VitaminCParser.FunContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_fun)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.atom()
            self.state = 100
            self.match(VitaminCParser.T__3)
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << VitaminCParser.Name) | (1 << VitaminCParser.LANGLE) | (1 << VitaminCParser.RANGLE) | (1 << VitaminCParser.QUOTE) | (1 << VitaminCParser.EQUAL) | (1 << VitaminCParser.COLON) | (1 << VitaminCParser.Symbol))) != 0):
                self.state = 101
                self.funParam()


            self.state = 108
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==VitaminCParser.T__5:
                self.state = 104
                self.match(VitaminCParser.T__5)
                self.state = 105
                self.funParam()
                self.state = 110
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 111
            self.match(VitaminCParser.T__4)
            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==VitaminCParser.T__6:
                self.state = 112
                self.match(VitaminCParser.T__6)
                self.state = 113
                self.typ()


            self.state = 116
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunParamContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atom(self):
            return self.getTypedRuleContext(VitaminCParser.AtomContext,0)


        def COLON(self):
            return self.getToken(VitaminCParser.COLON, 0)

        def typ(self):
            return self.getTypedRuleContext(VitaminCParser.TypContext,0)


        def EQUAL(self):
            return self.getToken(VitaminCParser.EQUAL, 0)

        def expr(self):
            return self.getTypedRuleContext(VitaminCParser.ExprContext,0)


        def getRuleIndex(self):
            return VitaminCParser.RULE_funParam

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunParam" ):
                listener.enterFunParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunParam" ):
                listener.exitFunParam(self)




    def funParam(self):

        localctx = VitaminCParser.FunParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_funParam)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.atom()
            self.state = 119
            self.match(VitaminCParser.COLON)
            self.state = 120
            self.typ()
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==VitaminCParser.EQUAL:
                self.state = 121
                self.match(VitaminCParser.EQUAL)
                self.state = 122
                self.expr()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CallContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atom(self):
            return self.getTypedRuleContext(VitaminCParser.AtomContext,0)


        def callArg(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VitaminCParser.CallArgContext)
            else:
                return self.getTypedRuleContext(VitaminCParser.CallArgContext,i)


        def getRuleIndex(self):
            return VitaminCParser.RULE_call

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCall" ):
                listener.enterCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCall" ):
                listener.exitCall(self)




    def call(self):

        localctx = VitaminCParser.CallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_call)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.atom()
            self.state = 126
            self.match(VitaminCParser.T__3)
            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << VitaminCParser.T__0) | (1 << VitaminCParser.T__2) | (1 << VitaminCParser.T__3) | (1 << VitaminCParser.T__7) | (1 << VitaminCParser.Real) | (1 << VitaminCParser.Int) | (1 << VitaminCParser.String) | (1 << VitaminCParser.Name) | (1 << VitaminCParser.LANGLE) | (1 << VitaminCParser.RANGLE) | (1 << VitaminCParser.QUOTE) | (1 << VitaminCParser.EQUAL) | (1 << VitaminCParser.COLON) | (1 << VitaminCParser.Symbol))) != 0):
                self.state = 127
                self.callArg()


            self.state = 134
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==VitaminCParser.T__5:
                self.state = 130
                self.match(VitaminCParser.T__5)
                self.state = 131
                self.callArg()
                self.state = 136
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 137
            self.match(VitaminCParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CallArgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(VitaminCParser.ExprContext,0)


        def atom(self):
            return self.getTypedRuleContext(VitaminCParser.AtomContext,0)


        def COLON(self):
            return self.getToken(VitaminCParser.COLON, 0)

        def getRuleIndex(self):
            return VitaminCParser.RULE_callArg

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCallArg" ):
                listener.enterCallArg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCallArg" ):
                listener.exitCallArg(self)




    def callArg(self):

        localctx = VitaminCParser.CallArgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_callArg)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,16,self._ctx)
            if la_ == 1:
                self.state = 139
                self.atom()
                self.state = 140
                self.match(VitaminCParser.COLON)


            self.state = 144
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PragmaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atom(self):
            return self.getTypedRuleContext(VitaminCParser.AtomContext,0)


        def pragmaFun(self):
            return self.getTypedRuleContext(VitaminCParser.PragmaFunContext,0)


        def getRuleIndex(self):
            return VitaminCParser.RULE_pragma

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPragma" ):
                listener.enterPragma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPragma" ):
                listener.exitPragma(self)




    def pragma(self):

        localctx = VitaminCParser.PragmaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_pragma)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.match(VitaminCParser.T__7)
            self.state = 147
            self.atom()
            self.state = 149
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,17,self._ctx)
            if la_ == 1:
                self.state = 148
                self.pragmaFun()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PragmaFunContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def pragmaArg(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VitaminCParser.PragmaArgContext)
            else:
                return self.getTypedRuleContext(VitaminCParser.PragmaArgContext,i)


        def getRuleIndex(self):
            return VitaminCParser.RULE_pragmaFun

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPragmaFun" ):
                listener.enterPragmaFun(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPragmaFun" ):
                listener.exitPragmaFun(self)




    def pragmaFun(self):

        localctx = VitaminCParser.PragmaFunContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_pragmaFun)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.match(VitaminCParser.T__3)
            self.state = 152
            self.pragmaArg()
            self.state = 157
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==VitaminCParser.T__5:
                self.state = 153
                self.match(VitaminCParser.T__5)
                self.state = 154
                self.pragmaArg()
                self.state = 159
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 160
            self.match(VitaminCParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PragmaArgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def constant(self):
            return self.getTypedRuleContext(VitaminCParser.ConstantContext,0)


        def atom(self):
            return self.getTypedRuleContext(VitaminCParser.AtomContext,0)


        def COLON(self):
            return self.getToken(VitaminCParser.COLON, 0)

        def getRuleIndex(self):
            return VitaminCParser.RULE_pragmaArg

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPragmaArg" ):
                listener.enterPragmaArg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPragmaArg" ):
                listener.exitPragmaArg(self)




    def pragmaArg(self):

        localctx = VitaminCParser.PragmaArgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_pragmaArg)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,19,self._ctx)
            if la_ == 1:
                self.state = 162
                self.atom()
                self.state = 163
                self.match(VitaminCParser.COLON)


            self.state = 167
            self.constant()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ConstantContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atom(self):
            return self.getTypedRuleContext(VitaminCParser.AtomContext,0)


        def intn(self):
            return self.getTypedRuleContext(VitaminCParser.IntnContext,0)


        def real(self):
            return self.getTypedRuleContext(VitaminCParser.RealContext,0)


        def string(self):
            return self.getTypedRuleContext(VitaminCParser.StringContext,0)


        def getRuleIndex(self):
            return VitaminCParser.RULE_constant

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstant" ):
                listener.enterConstant(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstant" ):
                listener.exitConstant(self)




    def constant(self):

        localctx = VitaminCParser.ConstantContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_constant)
        try:
            self.state = 173
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [VitaminCParser.Name, VitaminCParser.LANGLE, VitaminCParser.RANGLE, VitaminCParser.QUOTE, VitaminCParser.EQUAL, VitaminCParser.COLON, VitaminCParser.Symbol]:
                self.enterOuterAlt(localctx, 1)
                self.state = 169
                self.atom()
                pass
            elif token in [VitaminCParser.Int]:
                self.enterOuterAlt(localctx, 2)
                self.state = 170
                self.intn()
                pass
            elif token in [VitaminCParser.Real]:
                self.enterOuterAlt(localctx, 3)
                self.state = 171
                self.real()
                pass
            elif token in [VitaminCParser.String]:
                self.enterOuterAlt(localctx, 4)
                self.state = 172
                self.string()
                pass
            else:
                raise NoViableAltException(self)
